.provarCaches/00D6C0000000xA6UAI/objects/SFSSDupeCatcher__Duplicate_Warning__c.object
<CustomObject>
    <fields>
        <fullName>SFSSDupeCatcher__Scenario_Type__c</fullName>
        <description>The filter type of the parent filter.  This always matches the parent filter.</description>
        <inlineHelpText>The type of record matching that triggered the duplicate alert.  This value always matches the filter type of the parent filter.</inlineHelpText>
        <label>Filter Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Lead to Contact</fullName>
                </value>
                <value>
                    <fullName>Lead to Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFSSDupeCatcher__Scenario__c</fullName>
        <description>This field links the duplicate alert to its parent Filter.</description>
        <inlineHelpText>The Filter that is associated with this alert record.</inlineHelpText>
        <label>Filter</label>
        <referenceTo>SFSSDupeCatcher__Scenario__c</referenceTo>
        <relationshipLabel>DupeCatcher Duplicate Alerts</relationshipLabel>
        <relationshipName>Duplicate_Warnings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SFSSDupeCatcher__Triggering_Action__c</fullName>
        <description>This is the triggering action of the parent filter.  It always matches the triggering action of the parent.</description>
        <inlineHelpText>Shows whether this warning was triggered on an insert or an update.</inlineHelpText>
        <label>Triggering Action</label>
        <length>60</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>DupeCatcher Duplicate Alert</label>
    <listViews>
        <fullName>All_Alerts_Today</fullName>
        <columns>NAME</columns>
        <columns>SFSSDupeCatcher__Scenario__c</columns>
        <columns>SFSSDupeCatcher__Scenario_Type__c</columns>
        <columns>SFSSDupeCatcher__Triggering_Action__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>All Alerts Today</label>
    </listViews>
    <listViews>
        <fullName>All_Contact</fullName>
        <columns>NAME</columns>
        <columns>SFSSDupeCatcher__Scenario__c</columns>
        <columns>SFSSDupeCatcher__Triggering_Action__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SFSSDupeCatcher__Scenario_Type__c</field>
            <operation>equals</operation>
            <value>Contact</value>
        </filters>
        <label>All Contact</label>
    </listViews>
    <listViews>
        <fullName>SFSSDupeCatcher__All_Account_Warnings</fullName>
        <columns>NAME</columns>
        <columns>SFSSDupeCatcher__Scenario__c</columns>
        <columns>SFSSDupeCatcher__Scenario_Type__c</columns>
        <columns>SFSSDupeCatcher__Triggering_Action__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SFSSDupeCatcher__Scenario_Type__c</field>
            <operation>equals</operation>
            <value>Account</value>
        </filters>
        <label>All Account Warnings</label>
    </listViews>
    <listViews>
        <fullName>SFSSDupeCatcher__All_Lead_Warnings</fullName>
        <columns>NAME</columns>
        <columns>SFSSDupeCatcher__Scenario__c</columns>
        <columns>SFSSDupeCatcher__Scenario_Type__c</columns>
        <columns>SFSSDupeCatcher__Triggering_Action__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SFSSDupeCatcher__Scenario_Type__c</field>
            <operation>equals</operation>
            <value>Lead</value>
        </filters>
        <label>All Lead Warnings</label>
    </listViews>
    <listViews>
        <fullName>SFSSDupeCatcher__All_Lead_to_Contact_Warnings</fullName>
        <columns>NAME</columns>
        <columns>SFSSDupeCatcher__Scenario__c</columns>
        <columns>SFSSDupeCatcher__Scenario_Type__c</columns>
        <columns>SFSSDupeCatcher__Triggering_Action__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SFSSDupeCatcher__Scenario_Type__c</field>
            <operation>equals</operation>
            <value>Lead to Contact</value>
        </filters>
        <label>All Lead to Contact Warnings</label>
    </listViews>
    <listViews>
        <fullName>SFSSDupeCatcher__Lead_to_Account_Warnings</fullName>
        <columns>NAME</columns>
        <columns>SFSSDupeCatcher__Scenario__c</columns>
        <columns>SFSSDupeCatcher__Scenario_Type__c</columns>
        <columns>SFSSDupeCatcher__Triggering_Action__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SFSSDupeCatcher__Scenario_Type__c</field>
            <operation>equals</operation>
            <value>Lead to Account</value>
        </filters>
        <label>Lead to Account Warnings</label>
    </listViews>
    <nameField>
        <displayFormat>Alert-{0}</displayFormat>
        <label>Alert Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DupeCatcher Duplicate Alerts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>